--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#333333" />
     %sapper.base%
     <link rel="stylesheet" href="global.css" />
+    <link rel="stylesheet" href="extra.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     %sapper.styles% %sapper.head%
   </head>
